# place_capitals

./: Cargo.toml  LICENSE  LICENSE.txt  README.md
src/: lib.rs
src/capitals/: countries.json  us_states.json
