[package]
name = "place_capitals"
version = "0.1.0"
edition = "2021"
description = "Place Capitals Crate is a Rust library designed to provide easy access to static data related to countries, their capitals, and USA states and their capitals. This crate offers convenient functions to check whether a given place is a country or a USA state, as well as the ability to retrieve the capital for a given place."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.20"
serde = { version = "1.0.188",  features = ["derive"] }
serde_json = "1.0.105"
