[package]
name = "place_capitals"
version = "0.1.0"
edition = "2021"
description = "Get place capitals for countries and USA states"
license = "MIT"
homepage = "https://github.com/GeethaPardheev/place_capitals"
repository = "https://github.com/GeethaPardheev/place_capitals"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.20"
serde = { version = "1.0.188",  features = ["derive"] }
serde_json = "1.0.105"
